--- a/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/fylo-landing-page-with-two-column-layout-master/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="flex_row justify_between nav_style">
-    <img src="./images/logo.svg" alt="logo">
+    <img class="logo" src="./images/logo.svg" alt="logo">
     <ul class="flex row list_style flex_gap top_right">
       <li>Features</li>
       <li>Team</li>
@@ -24,13 +24,13 @@
     </ul>
   </nav>
 
-  <section class="flex_row align_center ">
+  <section class="flex_row align_center section_one">
     <div class="flex_column section_element flex_gap">
       <h1 class="font_header">All your files in one secure location, accessible anywhere.</h1>
       <p class="font_para">Fylo stores your most important files in one secure location.
         Access them wherever you need, share and collaborate with friends,
         family, and co-workers.</p>
-      <div class="flex_row flex_gap">
+      <div class="flex_row flex_gap input_btn">
         <input class="input_border" type="text" placeholder="enter your email">
         <button class="button_style">Get Started</button>
       </div>
@@ -49,7 +49,7 @@
         Securely share files and folders with friends, family and colleagues for
         live collaboration. No email attachments required!
       </p>
-      <a href="#">See how Fylo works<img src="./images/icon-arrow.svg" alt="arrow">
+      <a class="green_link" href="#">See how Fylo works<img src="./images/icon-arrow.svg" alt="arrow">
       </a>
       <div class="flex_column icon-quotes">
         <img class="quotes" src="./images/icon-quotes.svg" alt="quotes">
@@ -72,15 +72,15 @@
         If you have any questions, our support team would be happy to help you.
       </p>
     </div>
-    <div class="flex_column flex_gap">
+    <div class="flex_column flex_gap input_btn">
       <input class="input_border" type="text" placeholder="enter your email">
       <button class="button_style">Get Started For Free</button>
     </div>
   </section>
-  <footer class="flex_column flex_gap">
+  <footer class="flex_column flex_gap footer_style">
     <img src="./images/logo.footer.svg" alt="logo">
     <div class="flex_row footer_lists">
-      <ul>
+      <ul class="footer_list_style">
         <li>
           <img src="./images/icon-phone.svg" alt="phone">
           Phone: +1-543-123-4567
@@ -90,13 +90,13 @@
           example@fylo.com
         </li>
       </ul>
-      <ul>
+      <ul class="footer_list_style">
         <li>About Us</li>
         <li>Jobs</li>
         <li>Press</li>
         <li>Blog</li>
       </ul>
-      <ul>
+      <ul class="footer_list_style">
         <li>Contact Us</li>
         <li>Terms</li>
         <li>Privacy</li>
@@ -109,57 +109,6 @@
     </div>
 
   </footer>
-
-
-
-
-  <!-- Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy -->
-
 </body>
 
 </html>
